2007-07-16  Brady Anderson <brady.anderson@gmail.com> 

	* src/PhotoService.cs: added code to requeue the avatar update if it
	  fails

2007-07-16  Calvin Gaisford <calvinrg@gmail.com> 

	* src/SendingHandler.cs, src/RequestHandler.cs: changed buffer to 8K
	* src/Application.cs: removed notification window that was broken
	* src/TargetService.cs: changed progress notification to be time based

2007-07-15  Brady Anderson <brady.anderson@gmail.com> 

	* src/ServiceLocator.cs: used a different constructor when newing up
	  the service class.  asking specifically for IP4 addresses

2007-07-15  Calvin Gaisford <calvinrg@gmail.com> 

	* src/giver.in: fixed up the process name
	* src/ServiceLocator.cs: Added support for web avatars
	* src/SendingHandler.cs: changed the status messages
	* src/RequestHandler.cs: Added social message
	* configure.ac: changed the version after new release

2007-07-15  Calvin Gaisford <calvinrg@gmail.com> 

	* src/SendingHandler.cs: Updated to not cache the stream on a send
	* src/RequestHandler.cs: Updated request handler to flush on write

2007-07-03  Boyd Timothy <btimothy@gmail.com> 

	* configure.ac: Bump the version to 0.1.5 now that
	  0.1.4 has been released.

2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac, NEWS: Update the version

2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 

	* src/ServiceLocator.cs, src/Makefile.am, data/images/blankphoto.png,
	  data/images/Makefile.am: added blank photo

2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 

	* src/TargetWindow.cs, src/SendingHandler.cs, src/TargetService.cs,
	  giver.mdp: Added Bitch'n events

2007-06-29  Brady Anderson <brady.anderson@gmail.com> 

	updated the image

2007-06-29  Brady Anderson <brady.anderson@gmail.com> 

	changes for PhotoService

2007-06-29  Brady Anderson <brady.anderson@gmail.com> 

	added AvatarUpdated event

2007-06-29  Brady Anderson <brady.anderson@gmail.com> 

	removed debug messages
